Fixes project layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ body {
 
 .container {
   margin: 1em;
+  max-width: 1200px;
 }
 
 @media only screen and (min-width: 600px) {
@@ -248,6 +249,11 @@ a:focus {
 
 /* ========== PROJECTS ========== */
 
+#projects{
+  max-width: 900px;
+  margin: 0 auto;
+}
+
 .projects-title {
   text-align: center;
   margin: 2em;
@@ -262,10 +268,6 @@ a:focus {
   margin-bottom: 2em;
 }
 
-.swap {
-  order: -1;
-}
-
 .project-details {
   display: flex;
   flex-direction: column;
@@ -274,6 +276,7 @@ a:focus {
   margin-bottom: 2em;
   flex-grow: 1;
   flex-basis: 0;
+  margin-left: 2rem;
 }
 
 .project-copy {
@@ -318,37 +321,39 @@ a:focus {
 
 .project-img-container {
   position: relative;
-  width: 100%;
-  height: 100%;
-  flex-grow: 1;
+  width: 350px;
+  height: 350px;
+  flex-grow: 0;
   flex-basis: 0;
 }
 
-.project-img {
-  position: absolute;
-  width: 300px;
-  height: 300px;
+.project-img{
+  width: 350px;
+  height: 350px;
   border: 10px solid white;
+  z-index: 2;
+  position: relative;
+}
+
+.project-img-container:after{
+  content: "";
+  width: 350px;
+  height: 350px;
   z-index: 1;
-  margin-bottom: 1em;
-}
-
-.project-img-background {
-  width: 300px;
-  height: 300px;
+  background-color: black;
+  display: block;
   position: absolute;
-  z-index: -1;
+  top: 10px;
   transform: rotate(7deg);
-  transform-origin: bottom left;
 }
 
-.mid {
+.project-img-container.mid:after {
   background-color: var(--medium-pink);
 }
-.yellow {
+.project-img-container.yellow:after {
   background-color: var(--yellow);
 }
-.pale {
+.project-img-container.pale:after {
   background-color: var(--pale-pink);
 }
 
@@ -356,6 +361,17 @@ a:focus {
   .project-card {
     flex-direction: row;
     margin-bottom: 6em;
+  }
+
+  .project-details.swap{
+    order: -1;
+    margin-right: 2rem;
+    margin-left: 0;
+    align-items: flex-end;
+  }
+
+  .project-details.swap .project-copy{
+    text-align: right;
   }
 }
 
